<resources>
    <string name="app_name">Cooky</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_ingredient_search">Search By Ingredient</string>
    <string name="title_nutrient_search">Search By Nutrient</string>
    <string name="title_infomation">Information</string>
    <string name="title_rate_app">Rate this App</string>
    <string name="title_contact">Contact us</string>
    <string name="option_search">Search</string>
    <string name="option_label">Add Label</string>
    <string name="title_general">Search for recipes</string>
    <string name="title_main">MAIN COURSE</string>
    <string name="title_dessert">DESSERT</string>
    <string name="title_vietnamese">VIETNAMESE</string>
    <string name="title_recent">RECENT</string>
    <string name="title_nutrients_search">Search by Nutrients</string>
    <string name="title_ingredient">Ingredient</string>
    <string name="title_nutrition">Nutrition</string>
    <string name="title_limit_these">Limit These</string>
    <string name="title_get_enough">Get Enough Of These</string>
    <string name="title_instructions">Instructions</string>
    <string name="title_add_favorite">Added to favorite</string>
    <string name="title_remove_favorite">Removed to favorite</string>
    <string name="title_nutrients_option">Nutrients Option</string>
    <string name="title_done">Done</string>
    <string name="text_max_value_nutrient">100</string>
    <string name="text_min_value_nutrient">0 -</string>
    <string name="title_calo">Calories :</string>
    <string name="text_calo_range">50 - 1000</string>

    <string-array name="array_nutrients">
        <item>Calories</item>
        <item>Protein</item>
        <item>Calcium</item>
        <item>Sugar</item>
        <item>Cholesterol</item>
        <item>FAT</item>
        <item>Carbohydrates</item>
    </string-array>

    <string-array name="vitamin">
        <item>VitaminA</item>
        <item>VitaminC</item>
        <item>VitaminD</item>
        <item>VitaminE</item>
        <item>VitaminK</item>
    </string-array>
    <string name="title_recently_viewed">RECENTLY VIEWED</string>
    <string name="title_like">LIKE</string>
    <string name="title_my_favorite">My Favorite</string>
    <string name="title_meal_plan">Meal Plan</string>
    <string name="title_create_meal_plan">Create Meal Plan</string>
    <string name="title_calories_target">Calories Target:</string>
    <string name="title_default_calo">500</string>
    <string name="title_gluten_free">Gluten Free</string>
    <string name="title_ketogenic">Ketogenic</string>
    <string name="title_vegetarian">Vegetarian</string>
    <string name="title_vegan">Vegan</string>
    <string name="title_pescetarian">Pescetarian</string>
    <string name="title_paleo">Paleo</string>
    <string name="title_primal">Primal</string>
    <string name="title_whole30">Whole30</string>
    <string name="title_diet_all">All</string>
    <string name="title_diet">Diet:</string>
    <string name="title_create_new_meal_plan">Create New Meal Plan</string>
    <string name="title_breakfast">Breakfast</string>
    <string name="title_lunch">Lunch</string>
    <string name="title_dinner">Dinner</string>
    <string name="title_delete_meal_plan">Delete Meal Plan</string>
</resources>
